# data-science-project-example

./: .gitignore  README.md  pyproject.toml
data/processed/: dev.csv  test.csv  train.csv
notebooks/: best.ipynb  compare.ipynb  eda.ipynb
results/bert-albert-finetuned/: dev.csv  train.csv
results/bert-distilbert-finetuned/: dev.csv  train.csv
results/lr-ft-advanced/: dev.csv  train.csv
results/lr-ft-simple/: dev.csv  train.csv
results/lr-sbert-minilm/: dev.csv  train.csv
results/lr-sbert-mpnet/: dev.csv  train.csv
results/lr-tfidf-advanced/: dev.csv  train.csv
results/lr-tfidf-simple/: dev.csv  train.csv
scripts/experiments/: bert_albert_finetuned.py  bert_distilbert_finetuned.py  lr_ft_advanced.py  lr_ft_simple.py  lr_sbert_minilm.py  lr_sbert_mpnet.py  lr_tfidf_advanced.py  lr_tfidf_simple.py  train_classifier.py
scripts/processing/: extract_comments.py  prepare_train_dev_test.py  prepare_train_test.py
src/datasets/: comments_dataset.py
src/processing/: prepare_train_test.py
src/spam_ham_detector/: __init__.py  config.py  dataset.py  evaluation.py
src/spam_ham_detector/classifier/: bert.py
src/spam_ham_detector/vectorizer/: fasttext.py  tfidf.py
