[project]
name = "spam-ham-detector"
version = "0.1.0"
description = "YouTube comment spam detection using machine learning"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pandas>=2.3.3",
    "scikit-learn>=1.5.0",
    "sentence-transformers>=5.2.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["spam_ham_detector*"]
exclude = ["scripts*", "notebooks*", "data*"]
